--- a/Resources/Models/CreateVM.ar.resx
+++ b/Resources/Models/CreateVM.ar.resx
@@ -117,16 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="name" xml:space="preserve">
-    <value>Muhammad Elsayed Elqasas</value>
-    <comment/>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home en</value>
-    <comment/>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy en</value>
+  <data name="Name" xml:space="preserve">
+    <value>الاسم</value>
     <comment/>
   </data>
 </root>
